added final changes

--- a/index.html
+++ b/index.html
@@ -11,15 +11,15 @@
     <header class="header">
         <h1>Isaac Park <span class="Isaac">Full Stack Developer</span></h1>
             <nav class="links">
-                <li><a href="#About-Me" </li>About Me</a>
-                <li><a href="#Work" </li>Work</a>
-                <li><a href="#Contact-Me" </li>Contact Me</a>
+                <li><a href="#About-Me"> About Me</a></li>
+                <li><a href="#Work">Work </a></li>
+                <li><a href="#Contact-Me"> Contact Me</a></li>
             </nav>
     </header>
 
     <main id="About-Me">
         <div class="first">
-            <img src=".//photo-of-me.jpg" alt="photo of me">
+            <img src="./images/photo-of-me.jpg" alt="photo of me">
 
             <section>
                 <h2>Following the path of code</h2>
@@ -37,7 +37,7 @@
         <h3>Work</h3>
         <aside>
             <figure>
-                <img src="refractorpng.png" alt="photo of refractorpng">
+                <img src="./images/refractorpng.png" alt="photo of refractorpng">
                 <a href="https://isaacp5454.github.io/code-refractor/" target="_blank">Refracting-code</a>
                 <p> HTML/CSS</p>
             </figure>
@@ -47,7 +47,7 @@
 
 
             <figure class ="secondary-work">
-                <img src="preworkpng.png" alt="photo of Prework-Study-Guide2">
+                <img src="./images/preworkpng.png" alt="photo of Prework-Study-Guide2">
                 <a href="https://isaacp5454.github.io/prework-study-guide2/" target="_blank">Prework-Study-Guide2</a>
                 <p> HTML/CSS/JavaScript/GIT</p>
             </figure>
