--- a/index.html
+++ b/index.html
@@ -53,9 +53,9 @@
             </figure>
 
             <figure>
-                <img src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcRj2mGuiTnSMifrKst2aOFNmjdbBBbGemF_zHbI2oO9&s" alt="photo of dogs">
-                <a href="https://static.vecteezy.com/system/resources/previews/003/582/701/original/coming-soon-background-illustration-template-design-free-vector.jpg">Coming Soon</a>
-                <p>To be determined...</p>
+                <img src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcRj2mGuiTnSMifrKst2aOFNmjdbBBbGemF_zHbI2oO9&s" alt="API Project-1">
+                <a href="https://aboubacar7.github.io/mindful-cal-c/">Mindful (Cal)</a>
+                <p>HTML/CSS/JavaScript/GIT.</p>
             </figure>
             </div>
         </aside>
