--- a/index.html
+++ b/index.html
@@ -57,6 +57,14 @@
                 <a href="https://aboubacar7.github.io/mindful-cal-c/">Mindful (Cal)</a>
                 <p>HTML/CSS/JavaScript/GIT.</p>
             </figure>
+             
+            <figure>
+                <img src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcRj2mGuiTnSMifrKst2aOFNmjdbBBbGemF_zHbI2oO9&s" alt="API/MVC Project-2">
+                <a href="https://sleepsync.herokuapp.com/"> Sleep Sync App</a>
+                <p>HTML/CSS/JavaScript/GIT/Handlebars.</p>
+            </figure>
+
+
             </div>
         </aside>
     </section>
