--- a/index.html
+++ b/index.html
@@ -65,6 +65,7 @@
 
                 <img src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcRj2mGuiTnSMifrKst2aOFNmjdbBBbGemF_zHbI2oO9&s" alt="API/MVC Project-2">
                 <a href="https://sleepsync.herokuapp.com/"> Sleep Sync App</a>
+         <a href="git@github.com:jbungurait/Sleep_Tracker_App.git"> Sleep Sync App github Repo</a>
                 <p>HTML/CSS/JavaScript/GIT/Handlebars.</p>
             </figure>
 
